# nix-remote

./: Cargo.toml  builders.toml  clippy.toml  flake.nix  pyproject.toml  shell.nix
.github/workflows/: ci.yml  pages.yaml  release.yaml  version.yaml
nix/: makePackages.nix
nix_remote/: args.py  backoff.py  builder.py  darwin.py  main.py  sudo.py
nix_remote_build/: main.py
src/: app.rs  builder.rs  cli.rs  config.rs  install_tracing.rs  lib.rs  main.rs
